Fix work tasks - align

--- a/less/style.less
+++ b/less/style.less
@@ -1882,7 +1882,7 @@ body {
       padding: 30px;
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-around;
+      justify-content: space-between;
       &_item {
         width: 100%/4;
         position: relative;
